syntax = "proto3";
package moonrace.metastore;

message Key {
    bytes key = 1;
}

message Value {
    bytes value = 1;
}

message Metadata {
    Key key = 1;
    Value value = 2;
}

message KeyList {
    repeated Key keys = 1;
}

message Empty{}

service Metastore {
    rpc putMetadata(Metadata) returns (Key);
    rpc getMetadata(Key) returns (Metadata);
    rpc removeMetadata(Key) returns (Value);
    rpc listMetadata(Empty) returns (KeyList);
}